Fix T77641 Sculpt mode performance regression in 2.83